# mltools

./: .gitignore  CMakeLists.txt  DataContainer.cpp  DataContainer.h  Dataframe.cpp  README.md  dataframe.cpp  dataframe.h  main.cpp  pointer_learning.cpp  util.cpp  util.h
data/: test.csv  test_double.csv
old/: Dataframe.cpp  csv_load_test.cpp  dataframe.h  pointer_learning.cpp  pointer_learning_2.cpp
old/any datacontainer/: DataContainer_impl.h  ml_util.cpp
old/inheritance/: DataContainer.cpp  DataContainer.h  DecisionTree.h  DecisionTreeClassifier.cpp  DecisionTreeClassifier.h
old/learning/: composition_experiments.cpp  inheritance_experiments.cpp  parsing_large_files.cpp  tree_learning.cpp
old/unit_tests/: dataframe_split_unittest.cpp
old/void pointer dataframe/: DataContainer_tests.cpp  data_container_unique_practice.cpp
old/void pointer dataframe/Tree/: DecisionTree.cpp  DecisionTree.h  DecisionTreeClassifier.cpp  DecisionTreeNode.h
src/: DataContainer.cpp  DataContainer.h  DataContainer_impl.h  TODO.txt  main.cpp  ml_util.cpp  ml_util.h  util.h
src/DataContainer/: DataContainer.cpp  DataContainer.h
src/Tree/: DecisionTree.cpp  DecisionTree.h  DecisionTreeClassifier.cpp  DecisionTreeClassifier.h  DecisionTreeNode.h
tests/: test.csv  test_double.csv
unit_tests/: dataframe_split_unittest.cpp  dataframe_unit_suite.cpp
